[tool.poetry]
name = "demo-python-cryptography"
version = "0.1.0"
description = ""
authors = ["natthasath <natthasath.sak@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "demo_python_cryptography"}]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^39.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
